content: update quarto blog features

--- a/posts/day-1-test-quarto.qmd
+++ b/posts/day-1-test-quarto.qmd
@@ -13,3 +13,9 @@ categories: [learning, daily]
 ## Reflections
 
 I loss tracks of how much I create blog and abandon it again and again. Now trying to use quarto to make writing simpler. Let's try if using simpler and dedicated tools like rstudio with quarto can make me commit to writing. Quarto can be used for a lot of things too that make me want to learn it. Just like emacs but focus on writing.
+
+## Features
+
+-   Rstudio to write
+
+-   Setup github pages to automatically deploy new blog update after a commit to main
